# SynthKit

./: .gitignore  README.md  pyproject.toml
config/: project.example.yaml
synthkit/: __init__.py  cli.py  config.py  extensions.py  logging_config.py
synthkit/curation/: __init__.py  judge_base.py  llm_judge.py
synthkit/export/: __init__.py  formats.py  writers.py
synthkit/generation/: __init__.py  base.py  cot_pairs.py  qa_pairs.py
synthkit/io/: __init__.py  chunking.py  loaders.py  pdf_reader.py  txt_reader.py
synthkit/models/: __init__.py  anthropic_client.py  client_base.py  http_client.py  ollama_client.py  openai_client.py  router.py  session.py
synthkit/pipeline/: __init__.py  audit.py  harvest.py  mint.py  package.py  run_all.py
tests/: conftest.py  test_clients.py  test_extensions.py  test_router.py
